# mp-web-audit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/webaudit/: __main__.py  orchestrator.py
src/webaudit/cli/: app.py  common.py
src/webaudit/cli/commands/: discover.py  report.py  scan.py  security.py  techstack.py  web.py
src/webaudit/core/: base_scanner.py  config.py  exceptions.py  http_client.py  logging.py  models.py  references.py  scoring.py  utils.py
src/webaudit/reporting/: csv_reporter.py  engine.py  html_reporter.py  json_reporter.py  terminal_reporter.py
src/webaudit/reporting/templates/: report.html.j2  style.css
src/webaudit/scanners/: __init__.py  cookies.py  directory.py  dns_scanner.py  headers.py  info_disclosure.py  injection.py  misconfig.py  mobile.py  performance.py  ports.py  redirect.py  seo.py  ssl_scanner.py  subdomain.py  techstack.py  usability.py
tests/: conftest.py  test_cli.py  test_integration.py  test_models.py  test_orchestrator.py  test_reporting.py  test_scoring.py
tests/scanners/: test_cookies.py  test_directory.py  test_dns_scanner.py  test_headers.py  test_info_disclosure.py  test_injection.py  test_misconfig.py  test_mobile.py  test_performance.py  test_ports.py  test_redirect.py  test_seo.py  test_ssl_scanner.py  test_subdomain.py  test_techstack.py  test_usability.py
wordlists/: common.txt
